<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignupActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/text_large"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_til"
         />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_til"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_first_top"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_til"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:hint="@string/enter_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_til"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_til"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_til"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="@dimen/margin_top"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/re_enter_password"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_start"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/confirm_til"/>

    <TextView
        android:id="@+id/already_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_start"
        app:layout_constraintTop_toBottomOf="@id/signup_button" />

    <TextView
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/blue"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/already_tv"
        app:layout_constraintStart_toEndOf="@id/already_tv"
        app:layout_constraintTop_toBottomOf="@id/signup_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>